# Blog-Gen

./: Convert.hs  Html.hs  LICENSE  Main.hs  README.md  blog-gen.cabal  example.txt  hello.hs  hello.html
Html/: Internal.hs
app/: Main.hs  OptParse.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.7/: blog-gen-0.1.0.0-inplace.conf  package.cache
src/: HsBlog.hs
src/HsBlog/: Convert.hs  Markup.hs
src/HsBlog/Html/: Internal.hs
