cabal-version:      3.0
name:               blog-gen
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Neil Kamath
maintainer:         neilkamath07@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
    import: common-settings
    hs-source-dirs: src
    build-depends:
        base
      , directory
    exposed-modules:
        HsBlog
          HsBlog.Convert
          HsBlog.Html
            HsBlog.Html.Internal
          HsBlog.Markup
    -- other-modules:

executable hs-blog-gen
    import: common-settings
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base
      , blog-gen
    ghc-options:
        -O
